Nouvelle version avec les para

--- a/index.html
+++ b/index.html
@@ -84,21 +84,26 @@
         </blockquote>
 
         <div class="container">
-                <div class="row">
+                <div class="row" style="text-align:center;">
                     <div class="col-sm">
-                        <i class="fab fa-google-wallet fa-3x d-flex justify-content-center"></i>
+                        <i class="fab fa-google-wallet fa-3x"></i>
                     </br>
-                        <center> Si tu veux une valise </center>
+                        <p> tu veux une valise </p>
+                        <p> avant impression. Le Lorem Ipsum est le faux texte standard de l'imprimerie depuis </p>
+
                     </div>
                     <div class="col-sm">
-                        <i class="fab fa-google-play fa-3x d-flex justify-content-center"></i>
+                        <i class="fab fa-google-play fa-3x"></i>
                     </br>
-                        <center>Si tu veux une Appli</center>
+                        <p> tu veux une Appli </p> 
+                        <p> avant impression. Le Lorem Ipsum est le faux texte standard de l'imprimerie depuis </p>
                     </div>
+                    
                     <div class="col-sm">
-                        <i class="fab fa-google-drive fa-3x d-flex justify-content-center"></i>
+                        <i class="fab fa-google-drive fa-3x"></i>
                     </br>
-                        <center><p>Si tu veux Driver</p></center>
+                        <p>Si tu veux Driver</p>
+                        <p> avant impression. Le Lorem Ipsum est le faux texte standard de l'imprimerie depuis </p>
                     </div>
                 </div>
               </div>
@@ -106,7 +111,7 @@
 
  <!-- Footer -->
 <!-- Footer -->
-<footer class="page-footer font-small blue fixed-bottom bg-light">
+<footer class="page-footer font-small blue bg-light">
 
         <!-- Copyright -->
         <div class="footer-copyright text-center py-3">© 2018 Copyright:
